--- a/index.html
+++ b/index.html
@@ -1,24 +1,117 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Chat Uygulaması</title>
+  <title>Sohbet Odası</title>
+  <style>
+    body { font-family: Arial; text-align: center; padding: 20px; }
+    #chat { height: 300px; overflow-y: scroll; border: 1px solid #ccc; margin: 10px 0; text-align: left; padding: 10px; }
+    #message { padding: 10px; width: 70%; }
+    button { padding: 10px; margin: 5px; }
+  </style>
 </head>
 <body>
-  <div id="auth">
-    <h2>Giriş Yap</h2>
+  <h1>💬 Sohbet Odası</h1>
+
+  <div id="login">
+    <p>Kayıt veya giriş yap:</p>
     <input type="email" id="email" placeholder="Email">
     <input type="password" id="password" placeholder="Şifre">
-    <button onclick="login()">Giriş</button>
+    <br><br>
     <button onclick="register()">Kayıt Ol</button>
+    <button onclick="login()">Giriş Yap</button>
   </div>
 
   <div id="chat-area" style="display: none;">
-    <div id="chat" style="height: 400px; overflow-y: scroll; border: 1px solid #ccc;"></div>
-    <input type="text" id="message" placeholder="Mesaj yaz...">
-    <button id="send">Gönder</button>
+    <div id="chat"></div>
+    <input type="text" id="msg" placeholder="Mesaj yaz...">
+    <button onclick="send()">Gönder</button>
     <button onclick="logout()">Çıkış</button>
   </div>
 
-  <script type="module" src="script.js"></script>
+  <!-- Firebase kodları -->
+  <script type="module">
+    // Firebase'i ekle (aşağıda ayar yapacağız)
+    import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js';
+    import { getAuth, onAuthStateChanged, signInWithEmailAndPassword, createUserWithEmailAndPassword, signOut } from 'https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js';
+    import { getFirestore, collection, addDoc, onSnapshot } from 'https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js';
+
+    // ⚠️ BURAYI SONRA DOLDURACAĞIZ (Firebase ayarları)
+    const firebaseConfig = {
+      apiKey: "",
+      authDomain: "",
+      projectId: "",
+      storageBucket: "",
+      messagingSenderId: "",
+      appId: ""
+    };
+
+    // Firebase başlat
+    const app = initializeApp(firebaseConfig);
+    const auth = getAuth();
+    const db = getFirestore();
+
+    // Giriş kontrolü
+    onAuthStateChanged(auth, (user) => {
+      if (user) {
+        document.getElementById('login').style.display = 'none';
+        document.getElementById('chat-area').style.display = 'block';
+        loadMessages();
+      } else {
+        document.getElementById('login').style.display = 'block';
+        document.getElementById('chat-area').style.display = 'none';
+      }
+    });
+
+    // Mesaj gönder
+    window.send = () => {
+      const msg = document.getElementById('msg').value;
+      if (msg) {
+        addDoc(collection(db, 'messages'), {
+          text: msg,
+          uid: auth.currentUser.uid,
+          createdAt: new Date()
+        });
+        document.getElementById('msg').value = '';
+      }
+    };
+
+    // Mesajları yükle
+    function loadMessages() {
+      const chat = document.getElementById('chat');
+      onSnapshot(collection(db, 'messages'), (snapshot) => {
+        chat.innerHTML = '';
+        snapshot.docs.forEach(doc => {
+          const data = doc.data();
+          const div = document.createElement('div');
+          div.textContent = data.text;
+          div.style.margin = '5px';
+          div.style.padding = '5px';
+          div.style.background = data.uid === auth.currentUser.uid ? '#b8daff' : '#f0f0f0';
+          div.style.borderRadius = '5px';
+          chat.appendChild(div);
+        });
+        chat.scrollTop = chat.scrollHeight;
+      });
+    }
+
+    // Giriş yap
+    window.login = () => {
+      const email = document.getElementById('email').value;
+      const password = document.getElementById('password').value;
+      signInWithEmailAndPassword(auth, email, password);
+    };
+
+    // Kayıt ol
+    window.register = () => {
+      const email = document.getElementById('email').value;
+      const password = document.getElementById('password').value;
+      createUserWithEmailAndPassword(auth, email, password);
+    };
+
+    // Çıkış yap
+    window.logout = () => {
+      signOut(auth);
+    };
+  </script>
 </body>
 </html>
